# vtable

./: .gitignore  ApiEntry.hpp  ApiEntry.inc  CMakeLists.txt  Makefile  README.md  coff.cpp  pascalunit.hpp  pascalunit.pas  plugin.cpp  plugin.hpp
cmake/Modules/: CMakeTestPascalCompiler.cmake  clean-all.cmake
